# fabric-sql

./: .env.sample  README.md  Taskfile.yml  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
applications/: chat_app.py
fabric_sql/: __init__.py  database_definitions.yaml  hosting.py
fabric_sql/agents/: compliance_agent.py  db_query_agent.py  i_agent.py
fabric_sql/models/: column_definition.py  database_definition.py  table_definition.py  view_definition.py
fabric_sql/protocols/: i_chat_client.py  i_database_definitions.py  i_duplicate_db_service.py  i_postgres_db_service.py  i_source_database.py  i_target_database.py
fabric_sql/services/: chat_client.py  database_definitions.py  duplicate_db_service.py  openai_content_evaluator.py  postgres_db_service.py  source_database.py  target_database.py
scripts/: copy_tables.py  create_view.sql
tests/fabric_sql/: test_source_database.py  test_target_database.py
tests/fabric_sql/services/: test_chat_client.py  test_database_definitions.py  test_duplicate_db_service.py  test_openai_content_evaluator.py  test_postgres_db_service.py
